akregator (1.0-beta6-2) unstable; urgency=low

  * Rewrote a dependency wrt libkcal2-dev (closes: #271182)

 -- Pierre Habouzit <pierre.habouzit@m4x.org>  Sat, 11 Sep 2004 22:11:31 +0200

akregator (1.0-beta6-1) unstable; urgency=low

  * Add debian/watch file.
  * New upstream, feeds are now autosaved (closes: #262144).
  * New build against kdepim 3.3 (closes: #268420).
  * Added libckal2-dev build-dep (closes: #269713).

 -- Pierre Habouzit <pierre.habouzit@m4x.org>  Fri,  3 Sep 2004 08:58:20 +0200

akregator (1.0-beta5-2) unstable; urgency=low

  * Changed section from web to net.
  * Fix a problem with /usr/share/doc/... links for akregator-*-plugins.
  * remove kderemove menu entry (obsolete).

 -- Pierre Habouzit <pierre.habouzit@m4x.org>  Thu, 29 Jul 2004 17:21:45 +0200

akregator (1.0-beta5-1) unstable; urgency=low

  * new upstream.
  * First upload to debian (ITP closes: #251871).

 -- Pierre Habouzit <pierre.habouzit@m4x.org>  Fri, 16 Jul 2004 18:26:01 +0200

akregator (1.0-beta4-4) unstable; urgency=low
    
  * fixed menu for kde ( kderemove="y" ).
  * modified descriptions in control.
  * merged some lines in copyright.
  * some various fixes to changelog and control files.
  * add some /usr/share/doc symlinks.
  * cleaning lintian overrides.

 -- Pierre Habouzit <pierre.habouzit@m4x.org>  Fri, 09 Jul 2004 18:06:27 +0200

akregator (1.0-beta4-3) unstable; urgency=low
    
  * fixed copyright file.
  * added homepage to control.

 -- Pierre Habouzit <pierre.habouzit@m4x.org>  Thu, 01 Jul 2004 13:49:50 +0200

akregator (1.0-beta4-2) unstable; urgency=low

  * Fixed upstream (new upstream, but same version).
 
 -- Pierre Habouzit <pierre.habouzit@m4x.org>  Thu, 01 Jul 2004 10:13:09 +0200

akregator (1.0-beta4-1) unstable; urgency=low

  * New upstream.
  * Package now builds in pbuilder.
  * package for the konqueror plugin.

 -- Pierre Habouzit <pierre.habouzit@m4x.org>  Thu, 01 Jul 2004 00:45:11 +0200

akregator (1.0-beta3-3) unstable; urgency=low
